--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -17,6 +17,7 @@ COPY . /app-frontend/
 EXPOSE 3000
 
 # Configurar os comandos para iniciar a aplicação de acordo com as boas práticas
-ENTRYPOINT [ "npm", "start" ]
+ENTRYPOINT [ "npm", "run" ]
+CMD [ "start" ]
 
 # Dica: Leia a seção Docker e Docker-compose no README para mais informações
